# lazy-engine

./: .gitignore  README.md  stack.yaml
example/: Main.java
lazy-engine/: lazy-engine.cabal
lazy-engine-experiments/: lazy-engine-experiments.cabal
lazy-engine-experiments/src/: Experiments.hs
lazy-engine-jvm/: lazy-engine-jvm.cabal
lazy-engine-jvm-runtime-lib/org/lazyengine/runtime/: AlgebraicDataType.java  ArgStack.java  BoxedInt.java  Cell.java  GMachine.java  Node.java  Supercombinator.java
lazy-engine-jvm/src/LazyEngine/JVM/: GMachineToJavaClassFile.hs  JavaClassFile.hs  JavaClassFileToBinary.hs
lazy-engine/src/LazyEngine/: GMachine.hs  Name.hs  Operational.hs  OperationalChecker.hs  OperationalToGMachine.hs  OperationalUtils.hs
lazy-engine/test/LazyEngine/: OperationalToGMachineTests.hs  Tests.hs
