name:                lazy-engine-experiments
version:             0.1.0.0
synopsis:            Experiments with lazy-engine and related packages.
description:         Please see README.md
homepage:            https://github.com/arotenberg/lazy-engine#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Aaron Rotenberg
maintainer:          adrotenberg (at) gmail.com
copyright:           2015 Aaron Rotenberg
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable lazy-engine-experiments
  hs-source-dirs:      src
  main-is:             Experiments.hs
  build-depends:       base >= 4.7 && < 5
                     , bytestring == 0.10.*
                     , containers == 0.5.*
                     , lazy-engine == 0.1.*
                     , lazy-engine-jvm == 0.1.*
                     , process == 1.2.*
  ghc-options:         -W -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/arotenberg/lazy-engine
  subdir:   lazy-engine-experiments
