name:                lazy-engine
version:             0.1.0.0
synopsis:            A generic code generator for non-strict functional language compilers.
description:         Please see README.md
homepage:            https://github.com/arotenberg/lazy-engine#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Aaron Rotenberg
maintainer:          adrotenberg (at) gmail.com
copyright:           2015 Aaron Rotenberg
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LazyEngine.GMachine
                     , LazyEngine.Name
                     , LazyEngine.Operational
                     , LazyEngine.OperationalToGMachine
  build-depends:       base >= 4.7 && < 5
                     , containers == 0.5.*
  default-language:    Haskell2010

test-suite lazy-engine-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             LazyEngine/Tests.hs
  other-modules:       LazyEngine.OperationalToGMachineTests
  build-depends:       base
                     , containers
                     , HUnit == 1.2.*
                     , lazy-engine
                     , test-framework == 0.8.*
                     , test-framework-hunit == 0.3.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/arotenberg/lazy-engine
